--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies" : {
     "express" : "~4.1.0",
+    "cors" : "~2.5.0",
     "redis" : "~0.10.0",
     "morgan" : "~1.0.0",
     "optimist" : "~0.6.0",
